--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "flowbite": "^2.5.2",
     "pinia": "^2.2.6",
     "primevue": "^4.2.5",
     "tailwindcss-primeui": "^0.3.4",
