--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "@tabler/icons-vue": "^3.31.0",
     "axios": "^1.7.9",
     "flowbite": "^2.5.2",
     "js-cookie": "^3.0.5",
