--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "pinia": "^2.2.6",
     "primevue": "^4.2.5",
+    "sweetalert2": "^11.17.2",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
